--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: sans-serif;
+}
+.theme {
+    border: 1px solid #f2f2f2;
+    float: left;
+    width: 24.33%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.inner p {
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+.inner p:first-child {
+  margin-top: 0;
+}
+
+.content {
+    position: relative;
+}
+
+.overlay {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.77);
+}
+
+.inner {
+    position: relative;
+}
+
+.inner p:last-child {
+    margin-bottom: 0;
+}
+
+.inner {
+    padding: 20px 20px;
+    color: #fff;
+}
+
+.themes, .themes * {
+    box-sizing: border-box;
 }
