--- a/src/index.css
+++ b/src/index.css
@@ -26,11 +26,14 @@ body {
     right: 0;
     top: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.77);
+    background: linear-gradient(45deg, black, rgba(255, 255, 255, 0.46));
 }
 
 .inner {
     position: relative;
+    height: 200px;
+    background-size: cover;
+    background-position: top left;
 }
 
 .inner p:last-child {
